# import_test

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: coverage.yaml  tests.yaml
pkg/: __init__.py  __main__.py  try_import.py
pkg/bg/: bg_src.py
pkg/fg/: fg_src.py
tests/: test_import.py
